--- a/contracts/template/Cargo.toml
+++ b/contracts/template/Cargo.toml
@@ -4,11 +4,8 @@ version          = "0.1.0"
 authors          = ["author"]
 edition          = "2021"
 
-exclude          = [
-  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
-                    "contract.wasm",
-                    "hash.txt",
-                  ]
+# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
+exclude          = ["contract.wasm", "hash.txt"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
