--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,22 @@
 [workspace]
-members          = ["contracts/*"]
+# let members inline
+members          = ["package"]
+
+[workspace.package]
+version          = "0.1.0"
+edition          = "2021"
+authors          = ["Rhaki"]
+
 
 [workspace.dependencies]
-cosmwasm-schema  = "1.1.3"
-cosmwasm-std     = "1.1.3"
-cosmwasm-storage = "1.1.3"
-cw-storage-plus  = "1.0.1"
+cosmwasm-schema  = "1.3.0"
+cosmwasm-std     = "1.3.0"
+cw-storage-plus  = "1.1.0"
 cw2              = "1.0.1"
 schemars         = "0.8.10"
 serde            = { version = "1.0.145", default-features = false, features = ["derive"] }
-thiserror        = { version = "1.0.31" }
+thiserror        = "1.0.31"
+rhaki-cw-plus    = "0.6.5"
+{{crate_name}}-pkg = { path = "./package", version = "0.1.0"}
 
-cw-multi-test    = "0.16.2"
+cw-multi-test    = "0.16.5"
