--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members          = ["package"]
 [workspace.package]
 version          = "0.1.0"
 edition          = "2021"
-authors          = ["Rhaki"]
+authors          = ["{{authors}}"]
 
 
 [workspace.dependencies]
